--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -15,10 +15,10 @@
   {% endcomment %}
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">
+      <li class="list-group-item" style="background-color: rgb(177, 206, 211)">
         Python
       </li>
-      <li class="list-group-item">
+      <li class="list-group-item" style="background-color: rgb(177, 206, 211)">
         Django
       </li>
     </ul>
