--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -20,17 +20,23 @@
     {% endblock %}
   </title>
 </head>
-<body>
+<body style="background-color: rgb(177, 206, 211)">
   <header>
     {% include 'includes/header.html' %}
   </header>
-  <main>
-    <div class="container py-5">
-    {% block content %}
-      Нет списка постов (см. block content)
-    {% endblock %}
+<main>
+  <div class="container py-5">
+    <div class="row justify-content-md-center">
+      <div class="col-2"></div>
+      <div class="col-9">
+        {% block content %}
+          Нет списка постов (см. block content)
+        {% endblock %}
+      </div>
+      <div = class="col-2"></div>
     </div>
-  </main>
+  </div>
+</main>
 </body>
 <footer>
   {% include 'includes/footer.html' %}
