--- a/yatube/templates/includes/for_obj.html
+++ b/yatube/templates/includes/for_obj.html
@@ -1,17 +1,20 @@
 {% load thumbnail %}
-<div>
-  <ul>
-    <li>
-      Автор: {{ post.author.get_full_name }}
-    </li>
-    <li>
-      Дата публикации: {{ post.pub_date|date:"d E Y" }}
-    </li>
-  </ul>
-  {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-    <img class="card-img my-2" src="{{ im.url }}">
-  {% endthumbnail %}
-  <p>{{ post.text }}</p>
-  <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
-  <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
-  {% if not forloop.last %}<hr>{% endif %}
+{% load static %}
+  <div class="card mb-3 py-2" style="background-color: rgb(127, 175, 183)">
+    <ul class="list-group-horizontal d-flex justify-content-left align-items-left" style="list-style-type: none;">
+      <li>
+        <a href="{% url 'posts:profile' post.author.username %}" class="p-2"><small>{{ post.author.username }}</small></a>
+      </li>
+      <li>
+        <div style="left">
+       <small>{{ post.pub_date|date:"d E Y" }}</small>
+      </li>
+    </ul>
+    {% thumbnail post.image "960x339" crop="left" upscale=True as im %}
+      <img class="card-img my-2" src="{{ im.url }}">
+    {% endthumbnail %}
+    <div class="card-body">
+      <p class="card-text">{{ post.text }}</p>
+      <a href="{% url 'posts:post_detail' post.pk %}" class="btn btn-outline-secondary">Подробнее...</a>
+    </div>
+  </div>
