--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <header>
-  <nav class="navbar navbar-light" style="background-color: lightskyblue">
+  <nav class="navbar navbar-light" style="background-color: rgb(71, 119, 127)">
     <div class="container">
       <a class="navbar-brand" href="{% url 'posts:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -14,32 +14,32 @@
       Класс nav-pills нужен для выделения активных пунктов 
       {% endcomment %}
       {% with request.resolver_match.view_name as view_name %}
-      <ul class="nav nav-pills">
+      <ul class="nav nav-pills" style="color: rgb(15, 25, 27)">
         <li class="nav-item"> 
-          <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}">Об авторе</a>
+          <a class="nav-link {% if view_name  == 'about:author' %}active{% endif %}" href="{% url 'about:author' %}" style="color: rgb(15, 25, 27)">Об авторе</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}">Технологии</a>
+          <a class="nav-link {% if view_name  == 'about:tech' %}active{% endif %}" href="{% url 'about:tech' %}" style="color: rgb(15, 25, 27)">Технологии</a>
         </li>
         {% if request.user.is_authenticated %}
         <li class="nav-item"> 
-          <a class="nav-link {% if view_name  == 'posts:post_create' %}active{% endif %}" href="{% url 'posts:post_create' %}">Новая запись</a>
+          <a class="nav-link {% if view_name  == 'posts:post_create' %}active{% endif %}" href="{% url 'posts:post_create' %}" style="color: rgb(15, 25, 27)">Новая запись</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light" href="">Изменить пароль</a>
+          <a class="nav-link link-light" href="" style="color: rgb(15, 25, 27)">Изменить пароль</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light " href="{% url 'users:logout' %}">Выйти</a>
+          <a class="nav-link link-light " href="{% url 'users:logout' %}" style="color: rgb(15, 25, 27)">Выйти</a>
         </li>
         <li>
           Пользователь: {{ user.username }}
         </li>
         {% else %}
         <li class="nav-item"> 
-          <a class="nav-link link-light {% if view_name  == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}">Войти</a>
+          <a class="nav-link link-light {% if view_name  == 'users:login' %}active{% endif %}" href="{% url 'users:login' %}" style="color: rgb(15, 25, 27)">Войти</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link link-light {% if view_name  == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}">Регистрация</a>
+          <a class="nav-link link-light {% if view_name  == 'users:signup' %}active{% endif %}" href="{% url 'users:signup' %}" style="color: rgb(15, 25, 27)">Регистрация</a>
         </li>
         {% endif %}
         {% endwith %}
