--- a/yatube/templates/users/logged_out.html
+++ b/yatube/templates/users/logged_out.html
@@ -4,10 +4,10 @@
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header" style="background-color: rgb(71, 119, 127)">
         Выход
       </div>
-      <div class="card-body">
+      <div class="card-body" style="background-color: rgb(127, 175, 183)">
         <p>
           Вы вышли из своей учётной записи. Ждём вас снова!
         </p>
