--- a/yatube/templates/users/login.html
+++ b/yatube/templates/users/login.html
@@ -3,9 +3,9 @@
 {% block content %}
 {% load user_filters %}
   <div class="row justify-content-center">
-    <div class="col-md-8 p-5">
-      <div class="card">
-        <div class="card-header">
+    <div class="col-md-9 p-5">
+      <div class="card" style="background-color: rgb(127, 175, 183)">
+        <div class="card-header" style="background-color: rgb(71, 119, 127)">
           Войти на сайт
         </div>
         <div class="card-body">
@@ -24,7 +24,7 @@
               {% endfor %}
           {% endif %}
 
-          <form method="post"
+          <form method="post" 
             {% if action_url %}
               action="{% url action_url %}"
             {% endif %}
@@ -32,7 +32,7 @@
           {% csrf_token %}
 
           {% for field in form %}
-            <div class="form-group row my-3"
+            <div class="form-group row my-3" 
               {% if field.field.required %} 
                 aria-required="true"
               {% else %}
