--- a/yatube/templates/users/signup.html
+++ b/yatube/templates/users/signup.html
@@ -6,8 +6,10 @@
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">Зарегистрироваться</div>
-          <div class="card-body">
+        <div class="card-header" style="background-color: rgb(71, 119, 127)">
+          Зарегистрироваться
+        </div>
+          <div class="card-body" style="background-color: rgb(127, 175, 183)">
           {% load user_filters %}
               {% if form.errors %}
                   {% for field in form %} 
